--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Welcome!</h1>
     <p>Hello! I'm crouton and welcome to my website!</p>
+    <img src="him.png">
+    <p>picture of me ↑</p>
     <p>this website has 10 secrets! <i>can you find them all?</i></p>
     <p>here is everything i want to achieve:</p>
     <ul>
